Prevent horizontal overflow scroll.

--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
     display: flex;
     flex-direction: column;
     font-family: 'Montserrat', sans-serif;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .game-name {
